--- a/aceh.html
+++ b/aceh.html
@@ -64,7 +64,7 @@
                         <li><a class="dropdown-item" href="jawa_barat.html">Jawa Barat</a></li>
                         <li><a class="dropdown-item" href="jawa_tengah.html">Jawa Tengah</a></li>
                         <li><a class="dropdown-item" href="jogja.html">Daerah Istimewa Yogyakarta</a></li>
-                        <li><a class="dropdown-item" href="jawa_timur.htmlhtml">Jawa Timur</a></li>
+                        <li><a class="dropdown-item" href="jawa_timur.html">Jawa Timur</a></li>
                         <li><a class="dropdown-item" href="bali.html">Bali</a></li>
                         <li><a class="dropdown-item" href="ntt.html">Nusa Tenggara Timur</a></li>
                         <li><a class="dropdown-item" href="ntb.html">Nusa Tenggara Barat</a></li>
@@ -151,7 +151,7 @@ Pulau Lhoknga dikelilingi oleh perairan laut yang jernih dan menyimpan keanekara
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/FWzQZkmXfQs"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Museum Tsunami Aceh</h5>
+            <h5 class="card-title text-center">Museum Tsunami Aceh</h5>
             <p class="card-text">Museum Tsunami Aceh adalah sebuah museum yang didirikan untuk memperingati bencana gempa bumi dan tsunami besar yang melanda Aceh pada tanggal 26 Desember 2004.
 Museum Tsunami Aceh memiliki beberapa ruangan yang menampilkan berbagai benda dan dokumentasi yang terkait dengan bencana alam tersebut, termasuk foto-foto dan rekaman video. Ada juga replika kapal yang terdampar di tengah kota Banda Aceh sebagai hasil dari bencana tersebut. Di dalam museum, pengunjung dapat mempelajari lebih lanjut tentang sejarah bencana dan pengaruhnya pada masyarakat Aceh.</p>
             <div class="d-flex justify-content-between align-items-center">
