--- a/bangka_belitung.html
+++ b/bangka_belitung.html
@@ -64,7 +64,7 @@
                         <li><a class="dropdown-item" href="jawa_barat.html">Jawa Barat</a></li>
                         <li><a class="dropdown-item" href="jawa_tengah.html">Jawa Tengah</a></li>
                         <li><a class="dropdown-item" href="jogja.html">Daerah Istimewa Yogyakarta</a></li>
-                        <li><a class="dropdown-item" href="jawa_timur.htmlhtml">Jawa Timur</a></li>
+                        <li><a class="dropdown-item" href="jawa_timur.html">Jawa Timur</a></li>
                         <li><a class="dropdown-item" href="bali.html">Bali</a></li>
                         <li><a class="dropdown-item" href="ntt.html">Nusa Tenggara Timur</a></li>
                         <li><a class="dropdown-item" href="ntb.html">Nusa Tenggara Barat</a></li>
@@ -118,7 +118,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/L5vAJ9qxZog"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Pantai Tanjung Tinggi</h5>
+            <h5 class="card-title text-center">Pantai Tanjung Tinggi</h5>
             <p class="card-text">Pantai Tanjung Tinggi terletak di Kabupaten Belitung, Bangka Belitung. Pantai ini terkenal dengan batu granit raksasanya yang menarik dan menjadi latar belakang film "Laskar Pelangi". Pantai ini juga memiliki pasir putih yang lembut dan air laut yang jernih.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
@@ -133,7 +133,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Y_3RXgYxFtE"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Pulau Lengkuas</h5>
+            <h5 class="card-title text-center">Pulau Lengkuas</h5>
             <p class="card-text">Pulau Lengkuas adalah sebuah pulau kecil di dekat Pulau Belitung. Pulau ini terkenal dengan mercusuar tua yang masih berfungsi dan menjadi ikon wisata pulau Belitung. Pulau ini juga memiliki pantai yang indah dengan air laut yang jernih, sehingga cocok untuk aktivitas snorkeling.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
@@ -149,7 +149,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/SQkodBWfMwo"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Museum Kata Andrea Hirata</h5>
+            <h5 class="card-title text-center">Museum Kata Andrea Hirata</h5>
             <p class="card-text">Museum Kata Andrea Hirata terletak di Kabupaten Belitung Timur, Bangka Belitung. Museum ini didirikan untuk mengenang novel "Laskar Pelangi" karya Andrea Hirata yang mengambil latar belakang di Belitung. Di museum ini, wisatawan dapat menikmati pameran foto, buku-buku karya Andrea Hirata, dan melihat replika sekolah SD Muhammadiyah Gantong yang menjadi setting novel tersebut.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
