--- a/jakarta.html
+++ b/jakarta.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Maluku Utara</title>
+  <title>DKI Jakarta</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
   <!-- Bagian Header -->
   <header class="bg-bl-transparent no-border sticky-header">
     <div class="container">
@@ -96,63 +97,61 @@
   <section id="video-bg">
     <div class="video-overlay"></div>
     <video autoplay muted loop>
-      <source src="assets/video/bali.mp4" type="video/mp4">
+      <source src="assets/video/monas.mp4" type="video/mp4">
     </video>
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1>Maluku Utara</h1>
+          <h1>DKI Jakarta</h1>
           <p>Let's Xplore!</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Pertama -->
+    <!-- Pertama -->
+
   <div class="container mt-4 pt-1">
     <div class="row row-cols-9 row-cols-md-3 g-3">
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/J9tRLWAlG1E"></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IT0SMFf0LHE"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title text-center">Pantai Sulamadaha</h5>
-            <p class="card-text">Pantai Sulamadaha adalah sebuah pantai yang terletak di kota Ternate, provinsi Maluku Utara, Indonesia. Pantai ini terkenal dengan keindahan alam bawah lautnya yang menakjubkan, dengan terumbu karang yang masih sangat terjaga dan ikan-ikan yang beragam. Selain menyediakan spot snorkeling dan diving yang menarik, Pantai Sulamadaha juga menawarkan pemandangan yang memukau dengan pasir putihnya yang lembut, air laut yang jernih, dan pepohonan kelapa yang memberikan kesan tropis yang menenangkan.</p>
+            <h5 class="card-title text-center">Monumen Nasional</h5>
+            <p class="card-text">Monas atau Monumen Nasional adalah sebuah landmark atau simbol negara Indonesia yang terletak di pusat Jakarta, tepatnya di Jalan Medan Merdeka yang dibangun pada tahun 1961 oleh Presiden Soekarno dan memiliki tinggi 132 meter serta api perunggu yang beratnya mencapai 14,5 ton. Api ini digunakan sebagai simbol semangat dan keberanian bangsa Indonesia.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>
         </div>
       </div>
 
-      <!-- Kedua -->
+    <!-- Kedua -->
+      
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VFOuHQXlUCE"></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/da3Qikg6_Xc"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title text-center">Danau Tolire Besar</h5>
-            <p class="card-text">Danau Tolire Besar adalah sebuah danau yang terletak di kota Ternate, Maluku Utara, Indonesia. Danau ini terkenal dengan keindahan alamnya yang menakjubkan, dengan air danau yang tenang dan jernih serta dikelilingi oleh perbukitan yang hijau. Di sekitar danau ini juga terdapat beberapa pohon kelapa yang memberikan kesan tropis yang menenangkan. Danau Tolire Besar juga memiliki sejarah dan kepercayaan yang kuat di masyarakat setempat. Konon, di dalam danau ini terdapat makam Raja Jailolo yang menjadi simbol kekuatan spiritual masyarakat Ternate.</p>
+            <h5 class="card-title text-center">Taman Mini Indonesia Indah</h5>
+            <p class="card-text">Taman Mini Indonesia Indah (TMII) adalah sebuah taman rekreasi dan budaya yang terletak di Jakarta Timur, Indonesia. TMII dibangun pada tahun 1975 dan memiliki luas sekitar 150 hektar. Taman ini menampilkan keanekaragaman budaya dan keindahan alam dari seluruh Indonesia, dengan replika dari rumah adat dan tempat-tempat wisata dari berbagai provinsi di Indonesia. Selain itu, TMII juga memiliki museum-museum yang menampilkan sejarah, seni, dan budaya Indonesia. Pengunjung dapat menikmati berbagai atraksi wisata, seperti menonton pertunjukan tari dan musik tradisional, menikmati kuliner khas Indonesia, atau menikmati keindahan taman yang hijau dan asri.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>
         </div>
       </div>
 
-      <!-- Ketiga -->
+    <!-- Ketiga -->
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XN6B5C62r4E"></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9ZL2Hwpvxy4"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title text-center">Gunung Ibu</h5>
-            <p class="card-text">Gunung Ibu adalah gunung berapi yang terletak di Halmahera Barat, provinsi Maluku
-              Utara, Indonesia. Gunung Ibu merupakan salah satu gunung berapi yang masih aktif di Indonesia, dengan
-              ketinggian sekitar 1.325 meter di atas permukaan laut. Gunung Ibu terkenal dengan keindahan alamnya yang
-              menakjubkan, dengan pemandangan perbukitan yang hijau dan lembah-lembah yang dalam di sekitarnya. Meskipun
-              aktif, Gunung Ibu dianggap relatif aman untuk pendakian bagi para pendaki yang berpengalaman.</p>
+            <h5 class="card-title text-center">Ancol</h5>
+            <p class="card-text">Ancol adalah sebuah kawasan wisata pantai di Jakarta Utara, Indonesia. Ancol terkenal dengan Taman Impian Jaya Ancol, yang merupakan salah satu tempat wisata terbesar dan terpopuler di Jakarta. Di sini, pengunjung dapat menikmati berbagai wahana permainan seperti Atlantis Water Adventure, Dunia Fantasi, Seaworld, Gelanggang Samudra, dan lainnya. Selain itu, Ancol juga memiliki pantai dengan pemandangan indah yang menarik untuk dinikmati, serta terdapat berbagai restoran, hotel, dan fasilitas lainnya yang lengkap untuk mendukung kenyamanan pengunjung.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>
