--- a/jawa_barat.html
+++ b/jawa_barat.html
@@ -64,7 +64,7 @@
                         <li><a class="dropdown-item" href="jawa_barat.html">Jawa Barat</a></li>
                         <li><a class="dropdown-item" href="jawa_tengah.html">Jawa Tengah</a></li>
                         <li><a class="dropdown-item" href="jogja.html">Daerah Istimewa Yogyakarta</a></li>
-                        <li><a class="dropdown-item" href="jawa_timur.htmlhtml">Jawa Timur</a></li>
+                        <li><a class="dropdown-item" href="jawa_timur.html">Jawa Timur</a></li>
                         <li><a class="dropdown-item" href="bali.html">Bali</a></li>
                         <li><a class="dropdown-item" href="ntt.html">Nusa Tenggara Timur</a></li>
                         <li><a class="dropdown-item" href="ntb.html">Nusa Tenggara Barat</a></li>
@@ -97,7 +97,7 @@
   <section id="video-bg">
     <div class="video-overlay"></div>
     <video autoplay muted loop>
-      <source src="assets/video/nature.mp4" type="video/mp4">
+      <source src="assets/video/jabar.mp4" type="video/mp4">
     </video>
     <div class="container">
       <div class="row">
@@ -116,7 +116,7 @@
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pY7i_ER2cs8""></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pY7i_ER2cs8"></iframe>
           </div>
           <div class="card-body">
             <h5 class="card-title text-center">Kawah Putih</h5>
