--- a/jawa_tengah.html
+++ b/jawa_tengah.html
@@ -64,7 +64,7 @@
                         <li><a class="dropdown-item" href="jawa_barat.html">Jawa Barat</a></li>
                         <li><a class="dropdown-item" href="jawa_tengah.html">Jawa Tengah</a></li>
                         <li><a class="dropdown-item" href="jogja.html">Daerah Istimewa Yogyakarta</a></li>
-                        <li><a class="dropdown-item" href="jawa_timur.htmlhtml">Jawa Timur</a></li>
+                        <li><a class="dropdown-item" href="jawa_timur.html">Jawa Timur</a></li>
                         <li><a class="dropdown-item" href="bali.html">Bali</a></li>
                         <li><a class="dropdown-item" href="ntt.html">Nusa Tenggara Timur</a></li>
                         <li><a class="dropdown-item" href="ntb.html">Nusa Tenggara Barat</a></li>
@@ -97,7 +97,7 @@
   <section id="video-bg">
     <div class="video-overlay"></div>
     <video autoplay muted loop>
-      <source src="assets/video/nature.mp4" type="video/mp4">
+      <source src="assets/video/waves.mp4" type="video/mp4">
     </video>
     <div class="container">
       <div class="row">
