--- a/kalbar.html
+++ b/kalbar.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Maluku Utara</title>
+  <title>Kalimantan Barat</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
   <!-- Bagian Header -->
   <header class="bg-bl-transparent no-border sticky-header">
     <div class="container">
@@ -96,63 +97,61 @@
   <section id="video-bg">
     <div class="video-overlay"></div>
     <video autoplay muted loop>
-      <source src="assets/video/bali.mp4" type="video/mp4">
+      <source src="assets/video/nature.mp4" type="video/mp4">
     </video>
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1>Maluku Utara</h1>
+          <h1>Kalimantan Barat</h1>
           <p>Let's Xplore!</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Pertama -->
+    <!-- Pertama -->
+
   <div class="container mt-4 pt-1">
     <div class="row row-cols-9 row-cols-md-3 g-3">
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/J9tRLWAlG1E"></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/lIHvZkgKV_Y"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title text-center">Pantai Sulamadaha</h5>
-            <p class="card-text">Pantai Sulamadaha adalah sebuah pantai yang terletak di kota Ternate, provinsi Maluku Utara, Indonesia. Pantai ini terkenal dengan keindahan alam bawah lautnya yang menakjubkan, dengan terumbu karang yang masih sangat terjaga dan ikan-ikan yang beragam. Selain menyediakan spot snorkeling dan diving yang menarik, Pantai Sulamadaha juga menawarkan pemandangan yang memukau dengan pasir putihnya yang lembut, air laut yang jernih, dan pepohonan kelapa yang memberikan kesan tropis yang menenangkan.</p>
+            <h5 class="card-title text-center">Taman Nasional Gunung Palung</h5>
+            <p class="card-text">Taman Nasional Gunung Palung adalah kawasan hutan lindung seluas 90.000 hektar yang terletak di Kabupaten Ketapang, Kalimantan Barat, Indonesia. Taman Nasional ini didirikan pada tahun 1990 dan menjadi salah satu kawasan konservasi yang penting di Indonesia karena merupakan habitat alami bagi populasi orangutan Kalimantan yang terancam punah.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>
         </div>
       </div>
 
-      <!-- Kedua -->
+    <!-- Kedua -->
+      
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VFOuHQXlUCE"></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/GiIc6WTXads"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title text-center">Danau Tolire Besar</h5>
-            <p class="card-text">Danau Tolire Besar adalah sebuah danau yang terletak di kota Ternate, Maluku Utara, Indonesia. Danau ini terkenal dengan keindahan alamnya yang menakjubkan, dengan air danau yang tenang dan jernih serta dikelilingi oleh perbukitan yang hijau. Di sekitar danau ini juga terdapat beberapa pohon kelapa yang memberikan kesan tropis yang menenangkan. Danau Tolire Besar juga memiliki sejarah dan kepercayaan yang kuat di masyarakat setempat. Konon, di dalam danau ini terdapat makam Raja Jailolo yang menjadi simbol kekuatan spiritual masyarakat Ternate.</p>
+            <h5 class="card-title text-center">Pantai Tanjung Lokang</h5>
+            <p class="card-text">Pantai Tanjung Lokang adalah salah satu pantai yang terletak di Kabupaten Sambas, Kalimantan Barat, Indonesia. Pantai ini memiliki keindahan alam yang menakjubkan dengan hamparan pasir putih yang lebar dan air laut yang jernih. Di pantai ini, wisatawan dapat menikmati suasana pantai yang tenang dan melakukan berbagai aktivitas, seperti berenang, berjemur, dan snorkeling.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>
         </div>
       </div>
 
-      <!-- Ketiga -->
+    <!-- Ketiga -->
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XN6B5C62r4E"></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_8FHBtdntrs"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title text-center">Gunung Ibu</h5>
-            <p class="card-text">Gunung Ibu adalah gunung berapi yang terletak di Halmahera Barat, provinsi Maluku
-              Utara, Indonesia. Gunung Ibu merupakan salah satu gunung berapi yang masih aktif di Indonesia, dengan
-              ketinggian sekitar 1.325 meter di atas permukaan laut. Gunung Ibu terkenal dengan keindahan alamnya yang
-              menakjubkan, dengan pemandangan perbukitan yang hijau dan lembah-lembah yang dalam di sekitarnya. Meskipun
-              aktif, Gunung Ibu dianggap relatif aman untuk pendakian bagi para pendaki yang berpengalaman.</p>
+            <h5 class="card-title">Danau Sentarum</h5>
+            <p class="card-text">Danau Sentarum adalah sebuah danau besar yang terletak di Kabupaten Kapuas Hulu, Kalimantan Barat, Indonesia. Danau Sentarum memiliki keanekaragaman hayati yang kaya, termasuk lebih dari 240 spesies ikan, burung-burung air, kera, buaya, dan berbagai jenis tumbuhan. Danau ini juga terkenal karena keindahan alamnya, termasuk mata air dan air terjun yang tersembunyi di dalam hutan.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>
