--- a/banten.html
+++ b/banten.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Xplore</title>
+  <title>Banten</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
@@ -14,66 +14,85 @@
 </head>
 
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark navbar-scroll navbar-translucent">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="login.html">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="index.html#rekomendasi">Rekomendasi</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Provinsi
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item showDropdown" href="aceh.html">Nanggroe Aceh Darussalam</a>
-            <a class="dropdown-item" href="sumatera_utara.html">Sumatera Utara</a>
-            <a class="dropdown-item" href="sumatera_barat.html">Sumatera Barat</a>
-            <a class="dropdown-item" href="riau.html">Riau</a>
-            <a class="dropdown-item" href="kep_riau.html">Kepulauan Riau</a>
-            <a class="dropdown-item" href="jambi.html">Jambi</a>
-            <a class="dropdown-item" href="bengkulu.html">Bengkulu</a>
-            <a class="dropdown-item" href="sumatera_selatan.html">Sumatera Selatan</a>
-            <a class="dropdown-item" href="bangka_belitung.html">Bangka Belitung</a>
-            <a class="dropdown-item" href="#">Lampung</a>
-            <a class="dropdown-item" href="#">Banten</a>
-            <a class="dropdown-item" href="#">Jawa Barat</a>
-            <a class="dropdown-item" href="#">Jakarta</a>
-            <a class="dropdown-item" href="#">Jawa Tengah</a>
-            <a class="dropdown-item" href="#">Jogja</a>
-            <a class="dropdown-item" href="jawa_timur.html">Jawa Timur</a>
-            <a class="dropdown-item" href="bali.html">Bali</a>
-            <a class="dropdown-item" href="ntb.html">Nusa Tenggara Barat</a>
-            <a class="dropdown-item" href="ntt.html">Nusa Tenggara Timur</a>
-            <a class="dropdown-item" href="#">Kalimantan Barat</a>
-            <a class="dropdown-item" href="#">Kalimantan Tengah</a>
-            <a class="dropdown-item" href="#">Kalimantan Selatan</a>
-            <a class="dropdown-item" href="#">Kalimantan Timur</a>
-            <a class="dropdown-item" href="#">Kalimantan Utara</a>
-            <a class="dropdown-item" href="sulut.html">Sulawesi Utara</a>
-            <a class="dropdown-item" href="gorontalo.html">Gorontalo</a>
-            <a class="dropdown-item" href="sulteng.html">Sulawesi Tengah</a>
-            <a class="dropdown-item" href="sulbar.html">Sulawesi Barat</a>
-            <a class="dropdown-item" href="#">Sulawesi Selatan</a>
-            <a class="dropdown-item" href="sultenggara.html">Sulawesi Tenggara</a>
-            <a class="dropdown-item" href="#">Maluku</a>
+
+  <!-- Bagian Header -->
+  <header class="bg-bl-transparent no-border sticky-header">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="login" href="login.html">Login</a>
+              </li>
+
+              <li>
+                <div class="header-right ">
+                  <div class="input-group">
+                    <div class="dropdown">
+                      <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Pilih daerah
+                      </button>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="aceh.html">Nanggroe Aceh Darussalam</a></li>
+                        <li><a class="dropdown-item" href="sumatera_utara.html">Sumatera Utara</a></li>
+                        <li><a class="dropdown-item" href="sumatera_selatan.html">Sumatera Selatan</a></li>
+                        <li><a class="dropdown-item" href="sumatera_barat.html">Sumatera Barat</a></li>
+                        <li><a class="dropdown-item" href="bengkulu.html">Bengkulu</a></li>
+                        <li><a class="dropdown-item" href="riau.html">Riau</a></li>
+                        <li><a class="dropdown-item" href="kepualauan_riau.html">Kepulauan Riau</a></li>
+                        <li><a class="dropdown-item" href="jambi.html">Jambi</a></li>
+                        <li><a class="dropdown-item" href="lampung.html">Lampung</a></li>
+                        <li><a class="dropdown-item" href="bangka_belitung.html">Bangka Belitung</a></li>
+                        <li><a class="dropdown-item" href="kalbar">Kalimantan Barat</a></li>
+                        <li><a class="dropdown-item" href="kaltim.html">Kalimantan Timur</a></li>
+                        <li><a class="dropdown-item" href="kalsel.html">Kalimantan Selatan</a></li>
+                        <li><a class="dropdown-item" href="kalut.html">Kalimantan Utara</a></li>
+                        <li><a class="dropdown-item" href="banten.html">Banten</a></li>
+                        <li><a class="dropdown-item" href="jakarta.html">DKI Jakarta</a></li>
+                        <li><a class="dropdown-item" href="jawa_barat.html">Jawa Barat</a></li>
+                        <li><a class="dropdown-item" href="jawa_tengah.html">Jawa Tengah</a></li>
+                        <li><a class="dropdown-item" href="jogja.html">Daerah Istimewa Yogyakarta</a></li>
+                        <li><a class="dropdown-item" href="jawa_timur.html">Jawa Timur</a></li>
+                        <li><a class="dropdown-item" href="bali.html">Bali</a></li>
+                        <li><a class="dropdown-item" href="ntt.html">Nusa Tenggara Timur</a></li>
+                        <li><a class="dropdown-item" href="ntb.html">Nusa Tenggara Barat</a></li>
+                        <li><a class="dropdown-item" href="gorontalo.html">Gorontalo</a></li>
+                        <li><a class="dropdown-item" href="sulbar.html">Sulawesi Barat</a></li>
+                        <li><a class="dropdown-item" href="sulteng.html">Sulawesi Tengah</a></li>
+                        <li><a class="dropdown-item" href="sulut.html">Sulawesi Utara</a></li>
+                        <li><a class="dropdown-item" href="sultenggara.html">Sulawesi Tenggara</a></li>
+                        <li><a class="dropdown-item" href="sulsel.html">Sulawesi Selatan</a></li>
+                        <li><a class="dropdown-item" href="maluku_utara.html">Maluku Utara</a></li>
+                        <li><a class="dropdown-item" href="maluku.html">Maluku</a></li>
+                        <li><a class="dropdown-item" href="papua_barat.html">Papua Barat</a></li>
+                        <li><a class="dropdown-item" href="papua.html">Papua</a></li>
+                        <li><a class="dropdown-item" href="papua_tengah.html">Papua Tengah</a></li>
+                        <li><a class="dropdown-item" href="papua_pegunungan.html">Papua Pegunungan</a></li>
+                        <li><a class="dropdown-item" href="papua_selatan.html">Papua Selatan</a></li>
+                        <li><a class="dropdown-item" href="papua_baratdaya.html">Papua Barat Daya</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
           </div>
-        </li>
-      </ul>
+        </div>
+      </nav>
     </div>
-  </nav>
-
-
+  </header>
 
   <section id="video-bg">
     <div class="video-overlay"></div>
@@ -90,19 +109,16 @@
     </div>
   </section>
 
-  <!-- Angel -->
-
-
   <!-- Pertama -->
   <div class="container mt-4 pt-1">
     <div class="row row-cols-9 row-cols-md-3 g-3">
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Zm8eYi8ICp4></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Zm8eYi8ICp4"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Pantai Anyer</h5>
+            <h5 class="card-title text-center">Pantai Anyer</h5>
             <p class="card-text">Pantai yang terkenal dengan pemandangan matahari terbenamnya yang indah dan memiliki berbagai fasilitas seperti penginapan, restoran, dan aktivitas air seperti banana boat, jetski, dan lain-lain.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
@@ -114,10 +130,10 @@
       <div class="col-md-4">
         <div class="card mb-4 box-shadow">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Y_3RXgYxFtE></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Y_3RXgYxFtE"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Taman Nasional Ujung Kulon</h5>
+            <h5 class="card-title text-center">Taman Nasional Ujung Kulon</h5>
             <p class="card-text">Taman nasional yang terletak di ujung barat Pulau Jawa dan merupakan habitat asli badak Jawa yang dilindungi. Di taman nasional ini juga terdapat pantai dan pulau-pulau kecil yang indah.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
@@ -133,7 +149,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/C6zGQmbw5Cg"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Benteng Speelwijk</h5>
+            <h5 class="card-title text-center">Benteng Speelwijk</h5>
             <p class="card-text">Benteng Speelwijk adalah sebuah benteng peninggalan Belanda yang terletak di Kota Serang, Provinsi Banten, Indonesia. Benteng ini dibangun pada tahun 1679 dan menjadi salah satu benteng penting di Banten pada masa pemerintahan Belanda di Indonesia.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
