--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <li><a class="dropdown-item" href="jambi.html">Jambi</a></li>
                         <li><a class="dropdown-item" href="lampung.html">Lampung</a></li>
                         <li><a class="dropdown-item" href="bangka_belitung.html">Bangka Belitung</a></li>
-                        <li><a class="dropdown-item" href="kalbar">Kalimantan Barat</a></li>
+                        <li><a class="dropdown-item" href="kalbar.html">Kalimantan Barat</a></li>
                         <li><a class="dropdown-item" href="kaltim.html">Kalimantan Timur</a></li>
                         <li><a class="dropdown-item" href="kalsel.html">Kalimantan Selatan</a></li>
                         <li><a class="dropdown-item" href="kalut.html">Kalimantan Utara</a></li>
