--- a/jambi.html
+++ b/jambi.html
@@ -65,7 +65,7 @@
                         <li><a class="dropdown-item" href="jawa_barat.html">Jawa Barat</a></li>
                         <li><a class="dropdown-item" href="jawa_tengah.html">Jawa Tengah</a></li>
                         <li><a class="dropdown-item" href="jogja.html">Daerah Istimewa Yogyakarta</a></li>
-                        <li><a class="dropdown-item" href="jawa_timur.htmlhtml">Jawa Timur</a></li>
+                        <li><a class="dropdown-item" href="jawa_timur.html">Jawa Timur</a></li>
                         <li><a class="dropdown-item" href="bali.html">Bali</a></li>
                         <li><a class="dropdown-item" href="ntt.html">Nusa Tenggara Timur</a></li>
                         <li><a class="dropdown-item" href="ntb.html">Nusa Tenggara Barat</a></li>
