--- a/jawa_timur.html
+++ b/jawa_timur.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Xplore</title>
+  <title>Jawa Timur</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
@@ -14,43 +14,90 @@
 </head>
 
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="aceh.html">News</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Bahasa Indonesia
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">English</a>
-            <a class="dropdown-item" href="#">China</a>
-            <a class="dropdown-item" href="#">Spanish</a>
+
+  <!-- Bagian Header -->
+  <header class="bg-bl-transparent no-border sticky-header">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="login" href="login.html">Login</a>
+              </li>
+
+              <li>
+                <div class="header-right ">
+                  <div class="input-group">
+                    <div class="dropdown">
+                      <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Pilih daerah
+                      </button>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="aceh.html">Nanggroe Aceh Darussalam</a></li>
+                        <li><a class="dropdown-item" href="sumatera_utara.html">Sumatera Utara</a></li>
+                        <li><a class="dropdown-item" href="sumatera_selatan.html">Sumatera Selatan</a></li>
+                        <li><a class="dropdown-item" href="sumatera_barat.html">Sumatera Barat</a></li>
+                        <li><a class="dropdown-item" href="bengkulu.html">Bengkulu</a></li>
+                        <li><a class="dropdown-item" href="riau.html">Riau</a></li>
+                        <li><a class="dropdown-item" href="kepualauan_riau.html">Kepulauan Riau</a></li>
+                        <li><a class="dropdown-item" href="jambi.html">Jambi</a></li>
+                        <li><a class="dropdown-item" href="lampung.html">Lampung</a></li>
+                        <li><a class="dropdown-item" href="bangka_belitung.html">Bangka Belitung</a></li>
+                        <li><a class="dropdown-item" href="kalbar">Kalimantan Barat</a></li>
+                        <li><a class="dropdown-item" href="kaltim.html">Kalimantan Timur</a></li>
+                        <li><a class="dropdown-item" href="kalsel.html">Kalimantan Selatan</a></li>
+                        <li><a class="dropdown-item" href="kalut.html">Kalimantan Utara</a></li>
+                        <li><a class="dropdown-item" href="banten.html">Banten</a></li>
+                        <li><a class="dropdown-item" href="jakarta.html">DKI Jakarta</a></li>
+                        <li><a class="dropdown-item" href="jawa_barat.html">Jawa Barat</a></li>
+                        <li><a class="dropdown-item" href="jawa_tengah.html">Jawa Tengah</a></li>
+                        <li><a class="dropdown-item" href="jogja.html">Daerah Istimewa Yogyakarta</a></li>
+                        <li><a class="dropdown-item" href="jawa_timur.html">Jawa Timur</a></li>
+                        <li><a class="dropdown-item" href="bali.html">Bali</a></li>
+                        <li><a class="dropdown-item" href="ntt.html">Nusa Tenggara Timur</a></li>
+                        <li><a class="dropdown-item" href="ntb.html">Nusa Tenggara Barat</a></li>
+                        <li><a class="dropdown-item" href="gorontalo.html">Gorontalo</a></li>
+                        <li><a class="dropdown-item" href="sulbar.html">Sulawesi Barat</a></li>
+                        <li><a class="dropdown-item" href="sulteng.html">Sulawesi Tengah</a></li>
+                        <li><a class="dropdown-item" href="sulut.html">Sulawesi Utara</a></li>
+                        <li><a class="dropdown-item" href="sultenggara.html">Sulawesi Tenggara</a></li>
+                        <li><a class="dropdown-item" href="sulsel.html">Sulawesi Selatan</a></li>
+                        <li><a class="dropdown-item" href="maluku_utara.html">Maluku Utara</a></li>
+                        <li><a class="dropdown-item" href="maluku.html">Maluku</a></li>
+                        <li><a class="dropdown-item" href="papua_barat.html">Papua Barat</a></li>
+                        <li><a class="dropdown-item" href="papua.html">Papua</a></li>
+                        <li><a class="dropdown-item" href="papua_tengah.html">Papua Tengah</a></li>
+                        <li><a class="dropdown-item" href="papua_pegunungan.html">Papua Pegunungan</a></li>
+                        <li><a class="dropdown-item" href="papua_selatan.html">Papua Selatan</a></li>
+                        <li><a class="dropdown-item" href="papua_baratdaya.html">Papua Barat Daya</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
           </div>
-        </li>
-      </ul>
+        </div>
+      </nav>
     </div>
-  </nav>
-
-
+  </header>
 
   <section id="video-bg">
     <div class="video-overlay"></div>
     <video autoplay muted loop>
-      <source src="assets/video/nature.mp4" type="video/mp4">
+      <source src="assets/video/bromo.mp4" type="video/mp4">
     </video>
     <div class="container">
       <div class="row">
@@ -61,10 +108,7 @@
       </div>
     </div>
   </section>
-
-  <!-- Angel -->
-
-
+  
   <!-- Pertama -->
   <div class="container mt-4 pt-1">
     <div class="row row-cols-9 row-cols-md-3 g-3">
@@ -74,7 +118,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/m112HTLQbZQ"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Gunung Bromo</h5>
+            <h5 class="card-title text-center">Gunung Bromo</h5>
             <p class="card-text">Gunung Bromo adalah sebuah gunung berapi yang terletak di tengah-tengah Taman Nasional Bromo Tengger Semeru, yang berada di antara Kabupaten Malang, Lumajang, Probolinggo, dan Pasuruan di Jawa Timur, Indonesia. Gunung Bromo menjadi salah satu objek wisata terkenal di Indonesia karena keindahan pemandangan alamnya yang memukau.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
@@ -89,7 +133,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/HyJ_uStqgoY"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Kawah Ijen</h5>
+            <h5 class="card-title text-center">Kawah Ijen</h5>
             <p class="card-text">Kawah Ijen adalah Blue Fire atau api biru yang terlihat pada malam hari, yang merupakan fenomena alam yang sangat langka dan hanya terjadi di beberapa tempat di dunia.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
@@ -105,7 +149,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/I9SCknjlWdg"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Musem Angkut</h5>
+            <h5 class="card-title text-center">Musem Angkut</h5>
             <p class="card-text">Museum Angkut adalah sebuah museum transportasi yang terletak di Kota Batu, Jawa Timur, Indonesia. Museum ini memiliki koleksi kendaraan yang sangat beragam, termasuk mobil antik, motor klasik, pesawat terbang, kereta api, dan bus antik.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
