--- a/ntb.html
+++ b/ntb.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Xplore</title>
+  <title>Nusa Tenggara Barat</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
@@ -13,38 +13,85 @@
 </head>
 
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="aceh.html">News</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Bahasa Indonesia
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">English</a>
-            <a class="dropdown-item" href="#">China</a>
-            <a class="dropdown-item" href="#">Spanish</a>
+  
+  <!-- Bagian Header -->
+  <header class="bg-bl-transparent no-border sticky-header">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="login" href="login.html">Login</a>
+              </li>
+
+              <li>
+                <div class="header-right ">
+                  <div class="input-group">
+                    <div class="dropdown">
+                      <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Pilih daerah
+                      </button>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="aceh.html">Nanggroe Aceh Darussalam</a></li>
+                        <li><a class="dropdown-item" href="sumatera_utara.html">Sumatera Utara</a></li>
+                        <li><a class="dropdown-item" href="sumatera_selatan.html">Sumatera Selatan</a></li>
+                        <li><a class="dropdown-item" href="sumatera_barat.html">Sumatera Barat</a></li>
+                        <li><a class="dropdown-item" href="bengkulu.html">Bengkulu</a></li>
+                        <li><a class="dropdown-item" href="riau.html">Riau</a></li>
+                        <li><a class="dropdown-item" href="kepualauan_riau.html">Kepulauan Riau</a></li>
+                        <li><a class="dropdown-item" href="jambi.html">Jambi</a></li>
+                        <li><a class="dropdown-item" href="lampung.html">Lampung</a></li>
+                        <li><a class="dropdown-item" href="bangka_belitung.html">Bangka Belitung</a></li>
+                        <li><a class="dropdown-item" href="kalbar">Kalimantan Barat</a></li>
+                        <li><a class="dropdown-item" href="kaltim.html">Kalimantan Timur</a></li>
+                        <li><a class="dropdown-item" href="kalsel.html">Kalimantan Selatan</a></li>
+                        <li><a class="dropdown-item" href="kalut.html">Kalimantan Utara</a></li>
+                        <li><a class="dropdown-item" href="banten.html">Banten</a></li>
+                        <li><a class="dropdown-item" href="jakarta.html">DKI Jakarta</a></li>
+                        <li><a class="dropdown-item" href="jawa_barat.html">Jawa Barat</a></li>
+                        <li><a class="dropdown-item" href="jawa_tengah.html">Jawa Tengah</a></li>
+                        <li><a class="dropdown-item" href="jogja.html">Daerah Istimewa Yogyakarta</a></li>
+                        <li><a class="dropdown-item" href="jawa_timur.html">Jawa Timur</a></li>
+                        <li><a class="dropdown-item" href="bali.html">Bali</a></li>
+                        <li><a class="dropdown-item" href="ntt.html">Nusa Tenggara Timur</a></li>
+                        <li><a class="dropdown-item" href="ntb.html">Nusa Tenggara Barat</a></li>
+                        <li><a class="dropdown-item" href="gorontalo.html">Gorontalo</a></li>
+                        <li><a class="dropdown-item" href="sulbar.html">Sulawesi Barat</a></li>
+                        <li><a class="dropdown-item" href="sulteng.html">Sulawesi Tengah</a></li>
+                        <li><a class="dropdown-item" href="sulut.html">Sulawesi Utara</a></li>
+                        <li><a class="dropdown-item" href="sultenggara.html">Sulawesi Tenggara</a></li>
+                        <li><a class="dropdown-item" href="sulsel.html">Sulawesi Selatan</a></li>
+                        <li><a class="dropdown-item" href="maluku_utara.html">Maluku Utara</a></li>
+                        <li><a class="dropdown-item" href="maluku.html">Maluku</a></li>
+                        <li><a class="dropdown-item" href="papua_barat.html">Papua Barat</a></li>
+                        <li><a class="dropdown-item" href="papua.html">Papua</a></li>
+                        <li><a class="dropdown-item" href="papua_tengah.html">Papua Tengah</a></li>
+                        <li><a class="dropdown-item" href="papua_pegunungan.html">Papua Pegunungan</a></li>
+                        <li><a class="dropdown-item" href="papua_selatan.html">Papua Selatan</a></li>
+                        <li><a class="dropdown-item" href="papua_baratdaya.html">Papua Barat Daya</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
           </div>
-        </li>
-      </ul>
+        </div>
+      </nav>
     </div>
-  </nav>
-
-
+  </header>
 
   <section id="video-bg">
     <div class="video-overlay"></div>
@@ -54,15 +101,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1>Daerah Istimewa Yogyakarta</h1>
+          <h1>Nusa Tenggara Barat</h1>
           <p>Let's Xplore!</p>
         </div>
       </div>
     </div>
   </section>
-
-  <!-- Angel -->
-
 
   <!-- Pertama -->
   <div class="container mt-4 pt-1">
@@ -73,7 +117,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mFzg6NOuoDM"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Gunung Rinjani</h5>
+            <h5 class="card-title text-center">Gunung Rinjani</h5>
             <p class="card-text">Gunung Rinjani adalah gunung berapi aktif yang terletak di Pulau Lombok, Provinsi Nusa Tenggara Barat, Indonesia. Gunung Rinjani memiliki ketinggian 3.726 meter di atas permukaan laut dan merupakan gunung tertinggi kedua di Indonesia setelah Gunung Kerinci.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
@@ -88,14 +132,13 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/HRRVSFrowO4"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Gili Trawang</h5>
+            <h5 class="card-title text-center">Gili Trawang</h5>
             <p class="card-text">Gili Trawangan adalah sebuah pulau kecil yang terletak di Lombok Utara, Nusa Tenggara Barat, Indonesia. Pulau ini terkenal dengan pantainya yang indah, air lautnya yang jernih dan kehidupan laut yang bervariasi, menjadikannya salah satu destinasi wisata populer di Indonesia.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>
         </div>
       </div>
-
 
       <!-- Ketiga -->
       <div class="col-md-4">
@@ -104,7 +147,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ygFEG8_B65M"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Bukit Merese</h5>
+            <h5 class="card-title text-center">Bukit Merese</h5>
             <p class="card-text">Dari puncak Bukit Merese, wisatawan dapat menikmati panorama yang indah, termasuk pantai dengan pasir putih yang bersih, laut yang biru jernih, serta pemandangan pohon-pohon kelapa yang rimbun. Wisatawan juga dapat menikmati pemandangan matahari terbenam yang spektakuler dari puncak Bukit Merese.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
