--- a/papua.html
+++ b/papua.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Xplore</title>
+  <title>Papua</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
@@ -14,38 +14,85 @@
 </head>
 
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="aceh.html">News</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Bahasa Indonesia
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">English</a>
-            <a class="dropdown-item" href="#">China</a>
-            <a class="dropdown-item" href="#">Spanish</a>
+
+  <!-- Bagian Header -->
+  <header class="bg-bl-transparent no-border sticky-header">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="login" href="login.html">Login</a>
+              </li>
+
+              <li>
+                <div class="header-right ">
+                  <div class="input-group">
+                    <div class="dropdown">
+                      <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Pilih daerah
+                      </button>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="aceh.html">Nanggroe Aceh Darussalam</a></li>
+                        <li><a class="dropdown-item" href="sumatera_utara.html">Sumatera Utara</a></li>
+                        <li><a class="dropdown-item" href="sumatera_selatan.html">Sumatera Selatan</a></li>
+                        <li><a class="dropdown-item" href="sumatera_barat.html">Sumatera Barat</a></li>
+                        <li><a class="dropdown-item" href="bengkulu.html">Bengkulu</a></li>
+                        <li><a class="dropdown-item" href="riau.html">Riau</a></li>
+                        <li><a class="dropdown-item" href="kepualauan_riau.html">Kepulauan Riau</a></li>
+                        <li><a class="dropdown-item" href="jambi.html">Jambi</a></li>
+                        <li><a class="dropdown-item" href="lampung.html">Lampung</a></li>
+                        <li><a class="dropdown-item" href="bangka_belitung.html">Bangka Belitung</a></li>
+                        <li><a class="dropdown-item" href="kalbar">Kalimantan Barat</a></li>
+                        <li><a class="dropdown-item" href="kaltim.html">Kalimantan Timur</a></li>
+                        <li><a class="dropdown-item" href="kalsel.html">Kalimantan Selatan</a></li>
+                        <li><a class="dropdown-item" href="kalut.html">Kalimantan Utara</a></li>
+                        <li><a class="dropdown-item" href="banten.html">Banten</a></li>
+                        <li><a class="dropdown-item" href="jakarta.html">DKI Jakarta</a></li>
+                        <li><a class="dropdown-item" href="jawa_barat.html">Jawa Barat</a></li>
+                        <li><a class="dropdown-item" href="jawa_tengah.html">Jawa Tengah</a></li>
+                        <li><a class="dropdown-item" href="jogja.html">Daerah Istimewa Yogyakarta</a></li>
+                        <li><a class="dropdown-item" href="jawa_timur.html">Jawa Timur</a></li>
+                        <li><a class="dropdown-item" href="bali.html">Bali</a></li>
+                        <li><a class="dropdown-item" href="ntt.html">Nusa Tenggara Timur</a></li>
+                        <li><a class="dropdown-item" href="ntb.html">Nusa Tenggara Barat</a></li>
+                        <li><a class="dropdown-item" href="gorontalo.html">Gorontalo</a></li>
+                        <li><a class="dropdown-item" href="sulbar.html">Sulawesi Barat</a></li>
+                        <li><a class="dropdown-item" href="sulteng.html">Sulawesi Tengah</a></li>
+                        <li><a class="dropdown-item" href="sulut.html">Sulawesi Utara</a></li>
+                        <li><a class="dropdown-item" href="sultenggara.html">Sulawesi Tenggara</a></li>
+                        <li><a class="dropdown-item" href="sulsel.html">Sulawesi Selatan</a></li>
+                        <li><a class="dropdown-item" href="maluku_utara.html">Maluku Utara</a></li>
+                        <li><a class="dropdown-item" href="maluku.html">Maluku</a></li>
+                        <li><a class="dropdown-item" href="papua_barat.html">Papua Barat</a></li>
+                        <li><a class="dropdown-item" href="papua.html">Papua</a></li>
+                        <li><a class="dropdown-item" href="papua_tengah.html">Papua Tengah</a></li>
+                        <li><a class="dropdown-item" href="papua_pegunungan.html">Papua Pegunungan</a></li>
+                        <li><a class="dropdown-item" href="papua_selatan.html">Papua Selatan</a></li>
+                        <li><a class="dropdown-item" href="papua_baratdaya.html">Papua Barat Daya</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
           </div>
-        </li>
-      </ul>
+        </div>
+      </nav>
     </div>
-  </nav>
-
-
+  </header>
 
   <section id="video-bg">
     <div class="video-overlay"></div>
@@ -71,7 +118,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RykaPU2TZ98"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Danau Sentani</h5>
+            <h5 class="card-title text-center">Danau Sentani</h5>
             <p class="card-text">Danau Sentani adalah sebuah danau yang terletak di Kota Jayapura, Papua, Indonesia. Danau ini terkenal dengan keindahan alamnya yang menakjubkan, serta keberadaan rumah-rumah adat tradisional Suku Sentani yang berada di sekitarnya. Danau Sentani juga terkenal dengan kerajinan tangan khasnya, yaitu tenun ikat dengan corak dan warna yang unik dan indah. Di samping itu, Danau Sentani juga menjadi tempat berkumpulnya ribuan burung-burung air yang bermigrasi setiap tahunnya.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
@@ -86,14 +133,13 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/7YHF11EFKUA"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Taman Nasional Lorentz</h5>
+            <h5 class="card-title text-center">Taman Nasional Lorentz</h5>
             <p class="card-text">Taman Nasional Lorentz adalah sebuah taman nasional yang terletak di Provinsi Papua, Indonesia. Taman nasional ini dikenal sebagai salah satu kawasan konservasi yang paling penting di dunia karena memadukan ekosistem hutan hujan tropis, pegunungan, dan lautan di dalam satu wilayah yang luas. Taman Nasional Lorentz juga terkenal dengan keberadaan flora dan fauna langka yang menjadi habitat di dalamnya, seperti burung cendrawasih, burung enggang, kangguru pohon, dan berbagai spesies tumbuhan endemik Papua. Selain itu, Taman Nasional Lorentz juga memiliki puncak tertinggi di Indonesia bagian timur, yaitu Puncak Jaya yang memiliki ketinggian 4.884 meter di atas permukaan laut.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>
         </div>
       </div>
-
 
       <!-- Ketiga -->
       <div class="col-md-4">
@@ -102,7 +148,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-_-yJoZ5eZA"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Air Terjun Wafsarak</h5>
+            <h5 class="card-title text-center">Air Terjun Wafsarak</h5>
             <p class="card-text">Air Terjun Wafsarak adalah sebuah air terjun yang terletak di Kabupaten Fakfak, Papua Barat, Indonesia. Air terjun ini terkenal dengan keindahan alamnya yang masih alami, dengan air yang jernih mengalir dari ketinggian tebing batu karang. Air Terjun Wafsarak juga menjadi habitat bagi berbagai spesies burung dan satwa liar seperti kupu-kupu dan kelelawar. Untuk mencapai Air Terjun Wafsarak, pengunjung harus melakukan perjalanan darat dan trekking yang cukup menantang, tetapi pemandangan yang ditemukan di sepanjang perjalanan akan memuaskan pengunjung yang menyukai petualangan dan keindahan alam yang masih asli. </p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
