--- a/papua_barat.html
+++ b/papua_barat.html
@@ -12,7 +12,10 @@
   <link rel="icon" a href="assets/image/xnew.jpg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
- <!-- Bagian Header -->
+
+<body>
+
+  <!-- Bagian Header -->
   <header class="bg-bl-transparent no-border sticky-header">
     <div class="container">
       <nav class="navbar navbar-expand-lg">
@@ -61,7 +64,7 @@
                         <li><a class="dropdown-item" href="jawa_barat.html">Jawa Barat</a></li>
                         <li><a class="dropdown-item" href="jawa_tengah.html">Jawa Tengah</a></li>
                         <li><a class="dropdown-item" href="jogja.html">Daerah Istimewa Yogyakarta</a></li>
-                        <li><a class="dropdown-item" href="jawa_timur.htmlhtml">Jawa Timur</a></li>
+                        <li><a class="dropdown-item" href="jawa_timur.html">Jawa Timur</a></li>
                         <li><a class="dropdown-item" href="bali.html">Bali</a></li>
                         <li><a class="dropdown-item" href="ntt.html">Nusa Tenggara Timur</a></li>
                         <li><a class="dropdown-item" href="ntb.html">Nusa Tenggara Barat</a></li>
@@ -90,7 +93,7 @@
       </nav>
     </div>
   </header>
-  
+
   <section id="video-bg">
     <div class="video-overlay"></div>
     <video autoplay muted loop>
@@ -105,10 +108,7 @@
       </div>
     </div>
   </section>
-
-  <!-- Angel -->
-
-
+  
   <!-- Pertama -->
   <div class="container mt-4 pt-1">
     <div class="row row-cols-9 row-cols-md-3 g-3">
@@ -118,7 +118,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/79qjW_1E7s8"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Kepulauan Raja Ampat</h5>
+            <h5 class="card-title text-center">Kepulauan Raja Ampat</h5>
             <p class="card-text">Kepulauan Raja Ampat terdiri dari sekitar 1500 pulau-pulau kecil yang tersebar di antara Samudera Pasifik dan Laut Seram, dengan keanekaragaman hayati laut yang sangat melimpah. Beberapa spot terkenal di Raja Ampat antara lain Pulau Misool, Pulau Salawati, Pulau Batanta, dan Pulau Waigeo yang menawarkan keindahan terumbu karang, ikan-ikan tropis, dan hewan laut lainnya yang langka. Selain wisata bawah laut, di Raja Ampat juga terdapat beberapa tempat wisata lain seperti pantai-pantai yang indah, air terjun, dan bukit-bukit dengan pemandangan yang menakjubkan.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
@@ -133,14 +133,13 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8tAkx3OMOHw"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Kepulauan Pianemo</h5>
+            <h5 class="card-title text-center">Kepulauan Pianemo</h5>
             <p class="card-text">Kepulauan Pianemo adalah sebuah gugusan pulau-pulau kecil yang terletak di Kabupaten Raja Ampat, Papua Barat, Indonesia. Kepulauan Pianemo terkenal dengan keindahan pemandangan alamnya yang menakjubkan, terutama dari atas bukit karang yang menjulang tinggi di tengah-tengah pulau-pulau kecil tersebut. Bukit karang di Kepulauan Pianemo sering disebut sebagai "Pianemo Viewpoint" atau "Bukit Bintang Raja Ampat" karena pemandangan matahari terbit atau terbenam dari atas bukit ini sangat spektakuler dan menakjubkan.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>
         </div>
       </div>
-
 
       <!-- Ketiga -->
       <div class="col-md-4">
@@ -149,7 +148,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/gD-WOasucqc"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Taman Nasional Teluk Cendrawasih</h5>
+            <h5 class="card-title text-center">Taman Nasional Teluk Cendrawasih</h5>
             <p class="card-text">Taman Nasional Teluk Cendrawasih adalah sebuah taman nasional yang terletak di perairan Teluk Cendrawasih, Papua Barat, Indonesia. Taman Nasional ini terkenal dengan keindahan bawah lautnya yang spektakuler dan menjadi salah satu tempat terbaik di dunia untuk melakukan snorkeling dan diving. Di dalam perairan Teluk Cendrawasih, terdapat berbagai jenis biota laut yang unik dan langka, seperti ikan paus, hiu paus, lumba-lumba, penyu hijau, dan berbagai jenis ikan karang yang berwarna-warni. </p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
