--- a/sultenggara.html
+++ b/sultenggara.html
@@ -102,15 +102,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1>Daerah Istimewa Yogyakarta</h1>
+          <h1>Sulawesi Tenggara</h1>
           <p>Let's Xplore!</p>
         </div>
       </div>
     </div>
   </section>
-
-  <!-- Angel -->
-
 
   <!-- Pertama -->
   <div class="container mt-4 pt-1">
@@ -121,7 +118,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/3fdZSqclegc"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Pantai Talise</h5>
+            <h5 class="card-title text-center">Pantai Talise</h5>
             <p class="card-text">Pantai Talise terdapat berbagai fasilitas wisata seperti area bermain anak-anak, arena olahraga, tempat parkir, toilet, warung makan, dan kios-kios souvenir. Pengunjung juga dapat menyewa perahu untuk berkeliling di sekitar pantai.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
@@ -136,14 +133,13 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rbt4ctvKP8Y"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Danau Poso</h5>
+            <h5 class="card-title text-center">Danau Poso</h5>
             <p class="card-text">Di sekitar Danau Poso terdapat beberapa tempat wisata menarik, seperti air terjun Saluopa, Danau Lindu, dan Taman Nasional Lore Lindu. Selain itu, di sekitar danau juga terdapat beberapa kampung adat yang masih mempertahankan tradisi dan kebudayaan Sulawesi Tengah.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>
         </div>
       </div>
-
 
       <!-- Ketiga -->
       <div class="col-md-4">
@@ -152,7 +148,7 @@
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/bk0iJ0m8L3U"></iframe>
           </div>
           <div class="card-body">
-            <h5 class="card-title">Monumen Nosarara Nosabatu</h5>
+            <h5 class="card-title text-center">Monumen Nosarara Nosabatu</h5>
             <p class="card-text">Monumen ini memiliki bentuk menara setinggi sekitar 25 meter, dengan bagian atasnya berbentuk bulat. Di bagian atas monumen terdapat patung perempuan yang melambangkan pahlawan Sumba yang gugur dalam pertempuran.</p>
             <div class="d-flex justify-content-between align-items-center">
             </div>
